<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity7">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="90dp"
        android:layout_height="73dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.587"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoiti3" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="92dp"
        android:layout_height="74dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logooficialtecnm" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="342dp"
        android:layout_height="57dp"
        android:layout_marginTop="146dp"
        android:text="@string/txtv_instrucciones"
        android:textColor="#050505"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="342dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/txtv_pregunta5"
        android:textColor="#050505"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="act8"
        android:text="@string/btn_sig4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup5" />

    <RadioGroup
        android:id="@+id/radioGroup5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13">

        <RadioButton
            android:id="@+id/rb13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbtn_13" />

        <RadioButton
            android:id="@+id/rb14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbtn_14" />

        <RadioButton
            android:id="@+id/rb15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbtn_15" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>