<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity5">

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="75dp"
        android:layout_height="72dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logooficialtecnm" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="88dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoiti3" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="342dp"
        android:layout_height="57dp"
        android:layout_marginTop="156dp"
        android:text="@string/txtv_instrucciones"
        android:textColor="#050505"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="344dp"
        android:layout_height="29dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtv_pregunta3"
        android:textColor="#050505"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <RadioButton
            android:id="@+id/rb7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtn_9"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rb8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtn_8"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rb9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/rbtn_7"
            android:textSize="18sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="act5"
        android:text="@string/btn_sig3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup3" />
</androidx.constraintlayout.widget.ConstraintLayout>